test/testdata/classes/inheritance/static/super_missing_property_error.lox
class Superclass {}

class Subclass < Superclass {
  static method() {
    // error: 'Superclass' class has no static method 'method'
    // lint warning: 'Superclass' class has no static method 'method'
    super.method();
  }
}

Subclass.method();
